# docs/swagger.yaml
@@ -44,8 +44,6 @@ paths:
         "200":
           description: OK
       summary: add item
-      tags:
-      - add
   /api/deleteitem:
     delete:
       consumes:
@@ -70,18 +68,17 @@ paths:
         "200":
           description: OK
       summary: delete item
-      tags:
-      - delete
   /api/getItems/{id}:
     get:
       consumes:
       - application/json
-      description: Get all food items from the database or a specific item by ID
+      description: Get all food items from the database or a specific item by ID or
+        EAN
       parameters:
-      - description: Item ID to get a specific item
+      - description: Specifiy EAN to get a specific item
         in: path
         name: id
-        type: integer
+        type: string
       produces:
       - application/json
       responses:
@@ -91,10 +88,8 @@ paths:
             items:
               $ref: '#/definitions/Model.Item'
             type: array
-      summary: Get all food items or a specific item by ID
-      tags:
-      - get
-  /api/viewitems:
+      summary: Get all food items or a specific item by EAN
+  /api/viewexpiringitems:
     get:
       consumes:
       - application/json
@@ -105,6 +100,4 @@ paths:
         "200":
           description: OK
       summary: view items expiring soon
-      tags:
-      - view
 swagger: "2.0"
